[metadata]
name = failure
summary = Failure remoting, serialization, deserialization library.
description-file =
    README.rst
home-page = https://github.com/harlowja/failure
author = OpenStack
author-email = openstack-dev@lists.openstack.org
keywords = exceptions,failures,serialization
classifier =
    Development Status :: 3 - Alpha
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Libraries

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    failure

[wheel]
universal = 1
